# temanBicara

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_asr.ipynb  asr_evaluation_summary.csv  wav2vec2_indonesian_evaluation_results.csv
