[project]
name = "teman-bicara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "ipython>=9.7.0",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
